parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RES_SET
    TAB
    RES_ELIF
    NEW_LINE
    VAR
    AND
    OR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 main programa3
Rule 2     programa -> empty
Rule 3     generaglo -> <empty>
Rule 4     programa1 -> RES_PROTO prototipos seen_prototipo programa1
Rule 5     programa1 -> empty
Rule 6     seen_prototipo -> <empty>
Rule 7     programa2 -> programa2 vars
Rule 8     programa2 -> empty
Rule 9     valida_entra_global -> <empty>
Rule 10    valida_salir_gobal -> <empty>
Rule 11    programa3 -> programa3 modulos
Rule 12    programa3 -> empty
Rule 13    prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN
Rule 14    seen_dato -> <empty>
Rule 15    prototipos_1 -> tipo ID prototipos_2
Rule 16    prototipos_2 -> COMMA prototipos_1
Rule 17    prototipos_2 -> empty
Rule 18    dato -> RES_INT
Rule 19    dato -> RES_FLOAT
Rule 20    dato -> RES_DOUBLE
Rule 21    dato -> RES_BOOLEAN
Rule 22    dato -> RES_STRING
Rule 23    tipo -> dato
Rule 24    tipo -> estructura
Rule 25    estructura -> list
Rule 26    estructura -> array
Rule 27    vars -> RES_DEF COL vars1
Rule 28    vars1 -> estructura vars1
Rule 29    vars1 -> dato ID vars2 vars1_1
Rule 30    vars1_1 -> vars1
Rule 31    vars1_1 -> empty
Rule 32    vars2 -> EQUALS cons
Rule 33    vars2 -> vars3
Rule 34    vars3 -> COMMA ID vars3
Rule 35    vars3 -> empty
Rule 36    list -> RES_LIST dato ID list1
Rule 37    list1 -> LCURLY cons_loop RCURLY
Rule 38    list1 -> empty
Rule 39    cons_loop -> cons cons_loop_1
Rule 40    cons_loop_1 -> COMMA cons_loop
Rule 41    cons_loop_1 -> empty
Rule 42    array -> RES_ARRAY dato ID LBRACKET CTE_INT RBRACKET array1
Rule 43    array1 -> COL LBRACKET array2 RBRACKET
Rule 44    array1 -> empty
Rule 45    array2 -> cons
Rule 46    array2 -> cons COMMA array2
Rule 47    modulos -> prototipos se_uso COL bloque
Rule 48    se_uso -> <empty>
Rule 49    bloque -> estatutos bloque
Rule 50    bloque -> empty
Rule 51    estatutos -> condicion E_END
Rule 52    estatutos -> ciclo E_END
Rule 53    estatutos -> lectura
Rule 54    estatutos -> escritura
Rule 55    estatutos -> asignacion
Rule 56    estatutos -> llamada
Rule 57    estatutos -> vars
Rule 58    ciclo -> while
Rule 59    ciclo -> for
Rule 60    condicion -> if
Rule 61    condicion -> switch
Rule 62    llamada -> ID LPAREN llamada1 RPAREN
Rule 63    llamada1 -> expresion
Rule 64    llamada1 -> empty
Rule 65    lectura -> RES_READ LPAREN tipo RPAREN
Rule 66    escritura -> RES_PRINT LPAREN escritura1 RPAREN
Rule 67    escritura1 -> expresion
Rule 68    escritura1 -> CTE_STRING
Rule 69    asignacion -> ID seen_id_asignacion
Rule 70    seen_id_asignacion -> EQUALS asignacion1
Rule 71    asignacion1 -> exp
Rule 72    asignacion1 -> asignlist
Rule 73    asignacion1 -> asignarray
Rule 74    asignlist -> LCURLY asignlist1 RCURLY
Rule 75    asignlist1 -> cons
Rule 76    asignlist1 -> cons COMMA asignlist1
Rule 77    asignarray -> LBRACKET asignarray1 RBRACKET
Rule 78    asignarray1 -> cons
Rule 79    asignarray1 -> cons COMMA asignarray1
Rule 80    while -> RES_WHILE LPAREN expresion RPAREN COL bloque
Rule 81    for -> RES_FOR LPAREN forexp RPAREN COL bloque
Rule 82    forexp -> ID EQUALS cons COL expresion COL ID EQUALS expresion
Rule 83    if -> RES_IF LPAREN expresion RPAREN COL bloque ifelse
Rule 84    ifelse -> RES_ELSE COL bloque
Rule 85    ifelse -> empty
Rule 86    switch -> RES_SWITCH COL switch2
Rule 87    switch2 -> RES_CASE expresion COL bloque switch2
Rule 88    switch2 -> empty
Rule 89    expresion -> exp expresion_1
Rule 90    expresion_1 -> MIN exp
Rule 91    expresion_1 -> MIN_EQ exp
Rule 92    expresion_1 -> MAY exp
Rule 93    expresion_1 -> MAY_EQ exp
Rule 94    expresion_1 -> DIF exp
Rule 95    expresion_1 -> EQ_EQ exp
Rule 96    expresion_1 -> empty
Rule 97    exp -> termino exp1
Rule 98    exp1 -> PLUS exp
Rule 99    exp1 -> MINUS exp
Rule 100   exp1 -> empty
Rule 101   termino -> factor termino1
Rule 102   termino1 -> TIMES termino
Rule 103   termino1 -> DIVIDE termino
Rule 104   termino1 -> empty
Rule 105   factor -> LPAREN expresion RPAREN
Rule 106   factor -> cons
Rule 107   factor -> PLUS cons
Rule 108   factor -> MINUS cons
Rule 109   cons -> ID exp_1
Rule 110   cons -> CTE_INT exp_2
Rule 111   cons -> CTE_FLOAT exp_3
Rule 112   cons -> CTE_DOUBLE
Rule 113   cons -> CTE_STRING
Rule 114   cons -> RES_TRUE
Rule 115   cons -> RES_FALSE
Rule 116   cons -> consarray
Rule 117   cons -> conslist
Rule 118   exp_1 -> <empty>
Rule 119   exp_2 -> <empty>
Rule 120   exp_3 -> <empty>
Rule 121   main -> RES_START comienza_main COL bloque RES_END
Rule 122   comienza_main -> <empty>
Rule 123   consarray -> ID LBRACKET CTE_INT RBRACKET EQUALS cons
Rule 124   conslist -> ID EQUALS LCURLY conslist1 RCURLY
Rule 125   conslist1 -> cons
Rule 126   conslist1 -> cons COMMA conslist1
Rule 127   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
COL                  : 27 43 47 80 81 82 82 83 84 86 87 121
COMMA                : 16 34 40 46 76 79 126
CTE_DOUBLE           : 112
CTE_FLOAT            : 111
CTE_INT              : 42 110 123
CTE_STRING           : 68 113
DIF                  : 94
DIVIDE               : 103
EQUALS               : 32 70 82 82 123 124
EQ_EQ                : 95
E_END                : 51 52
ID                   : 13 15 29 34 36 42 62 69 82 82 109 123 124
LBRACKET             : 42 43 77 123
LCURLY               : 37 74 124
LPAREN               : 13 62 65 66 80 81 83 105
MAY                  : 92
MAY_EQ               : 93
MIN                  : 90
MINUS                : 99 108
MIN_EQ               : 91
NEW_LINE             : 
OR                   : 
PLUS                 : 98 107
RBRACKET             : 42 43 77 123
RCURLY               : 37 74 124
RES_ARRAY            : 42
RES_BOOLEAN          : 21
RES_CASE             : 87
RES_DEF              : 27
RES_DOUBLE           : 20
RES_ELIF             : 
RES_ELSE             : 84
RES_END              : 121
RES_FALSE            : 115
RES_FLOAT            : 19
RES_FOR              : 81
RES_FUNC             : 13
RES_IF               : 83
RES_INT              : 18
RES_LIST             : 36
RES_PRINT            : 66
RES_PROTO            : 4
RES_READ             : 65
RES_SET              : 
RES_START            : 121
RES_STRING           : 22
RES_SWITCH           : 86
RES_TRUE             : 114
RES_WHILE            : 80
RPAREN               : 13 62 65 66 80 81 83 105
TAB                  : 
TIMES                : 102
VAR                  : 
error                : 

Nonterminals, with rules where they appear

array                : 26
array1               : 42
array2               : 43 46
asignacion           : 55
asignacion1          : 70
asignarray           : 73
asignarray1          : 77 79
asignlist            : 72
asignlist1           : 74 76
bloque               : 47 49 80 81 83 84 87 121
ciclo                : 52
comienza_main        : 121
condicion            : 51
cons                 : 32 39 45 46 75 76 78 79 82 106 107 108 123 125 126
cons_loop            : 37 40
cons_loop_1          : 39
consarray            : 116
conslist             : 117
conslist1            : 124 126
dato                 : 13 23 29 36 42
empty                : 2 5 8 12 17 31 35 38 41 44 50 64 85 88 96 100 104
escritura            : 54
escritura1           : 66
estatutos            : 49
estructura           : 24 28
exp                  : 71 89 90 91 92 93 94 95 98 99
exp1                 : 97
exp_1                : 109
exp_2                : 110
exp_3                : 111
expresion            : 63 67 80 82 82 83 87 105
expresion_1          : 89
factor               : 101
for                  : 59
forexp               : 81
generaglo            : 1
if                   : 60
ifelse               : 83
lectura              : 53
list                 : 25
list1                : 36
llamada              : 56
llamada1             : 62
main                 : 1
modulos              : 11
programa             : 0
programa1            : 1 4
programa2            : 1 7
programa3            : 1 1 11
prototipos           : 4 47
prototipos_1         : 13 16
prototipos_2         : 15
se_uso               : 47
seen_dato            : 13
seen_id_asignacion   : 69
seen_prototipo       : 4
switch               : 61
switch2              : 86 87
termino              : 97 102 103
termino1             : 101
tipo                 : 15 65
valida_entra_global  : 1
valida_salir_gobal   : 1
vars                 : 7 57
vars1                : 27 28 30
vars1_1              : 29
vars2                : 29
vars3                : 33 34
while                : 58

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 main programa3
    (2) programa -> . empty
    (4) programa1 -> . RES_PROTO prototipos seen_prototipo programa1
    (5) programa1 -> . empty
    (127) empty -> .

    RES_PROTO       shift and go to state 3
    $end            reduce using rule 127 (empty -> .)
    RES_DEF         reduce using rule 127 (empty -> .)
    RES_START       reduce using rule 127 (empty -> .)
    RES_FUNC        reduce using rule 127 (empty -> .)

    programa1                      shift and go to state 1
    programa                       shift and go to state 2
    empty                          shift and go to state 4

state 1

    (1) programa -> programa1 . generaglo valida_entra_global programa2 valida_salir_gobal programa3 main programa3
    (3) generaglo -> .

    RES_DEF         reduce using rule 3 (generaglo -> .)
    RES_START       reduce using rule 3 (generaglo -> .)
    RES_FUNC        reduce using rule 3 (generaglo -> .)

    generaglo                      shift and go to state 5

state 2

    (0) S' -> programa .



state 3

    (4) programa1 -> RES_PROTO . prototipos seen_prototipo programa1
    (13) prototipos -> . RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN

    RES_FUNC        shift and go to state 7

    prototipos                     shift and go to state 6

state 4

    (2) programa -> empty .
    (5) programa1 -> empty .

    $end            reduce using rule 2 (programa -> empty .)
    RES_DEF         reduce using rule 5 (programa1 -> empty .)
    RES_START       reduce using rule 5 (programa1 -> empty .)
    RES_FUNC        reduce using rule 5 (programa1 -> empty .)


state 5

    (1) programa -> programa1 generaglo . valida_entra_global programa2 valida_salir_gobal programa3 main programa3
    (9) valida_entra_global -> .

    RES_DEF         reduce using rule 9 (valida_entra_global -> .)
    RES_START       reduce using rule 9 (valida_entra_global -> .)
    RES_FUNC        reduce using rule 9 (valida_entra_global -> .)

    valida_entra_global            shift and go to state 8

state 6

    (4) programa1 -> RES_PROTO prototipos . seen_prototipo programa1
    (6) seen_prototipo -> .

    RES_PROTO       reduce using rule 6 (seen_prototipo -> .)
    RES_DEF         reduce using rule 6 (seen_prototipo -> .)
    RES_START       reduce using rule 6 (seen_prototipo -> .)
    RES_FUNC        reduce using rule 6 (seen_prototipo -> .)

    seen_prototipo                 shift and go to state 9

state 7

    (13) prototipos -> RES_FUNC . dato seen_dato ID LPAREN prototipos_1 RPAREN
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12

    dato                           shift and go to state 14

state 8

    (1) programa -> programa1 generaglo valida_entra_global . programa2 valida_salir_gobal programa3 main programa3
    (7) programa2 -> . programa2 vars
    (8) programa2 -> . empty
    (127) empty -> .

    RES_DEF         reduce using rule 127 (empty -> .)
    RES_START       reduce using rule 127 (empty -> .)
    RES_FUNC        reduce using rule 127 (empty -> .)

    programa2                      shift and go to state 16
    empty                          shift and go to state 17

state 9

    (4) programa1 -> RES_PROTO prototipos seen_prototipo . programa1
    (4) programa1 -> . RES_PROTO prototipos seen_prototipo programa1
    (5) programa1 -> . empty
    (127) empty -> .

    RES_PROTO       shift and go to state 3
    RES_DEF         reduce using rule 127 (empty -> .)
    RES_START       reduce using rule 127 (empty -> .)
    RES_FUNC        reduce using rule 127 (empty -> .)

    empty                          shift and go to state 18
    programa1                      shift and go to state 19

state 10

    (21) dato -> RES_BOOLEAN .

    ID              reduce using rule 21 (dato -> RES_BOOLEAN .)
    RPAREN          reduce using rule 21 (dato -> RES_BOOLEAN .)


state 11

    (18) dato -> RES_INT .

    ID              reduce using rule 18 (dato -> RES_INT .)
    RPAREN          reduce using rule 18 (dato -> RES_INT .)


state 12

    (22) dato -> RES_STRING .

    ID              reduce using rule 22 (dato -> RES_STRING .)
    RPAREN          reduce using rule 22 (dato -> RES_STRING .)


state 13

    (20) dato -> RES_DOUBLE .

    ID              reduce using rule 20 (dato -> RES_DOUBLE .)
    RPAREN          reduce using rule 20 (dato -> RES_DOUBLE .)


state 14

    (13) prototipos -> RES_FUNC dato . seen_dato ID LPAREN prototipos_1 RPAREN
    (14) seen_dato -> .

    ID              reduce using rule 14 (seen_dato -> .)

    seen_dato                      shift and go to state 20

state 15

    (19) dato -> RES_FLOAT .

    ID              reduce using rule 19 (dato -> RES_FLOAT .)
    RPAREN          reduce using rule 19 (dato -> RES_FLOAT .)


state 16

    (1) programa -> programa1 generaglo valida_entra_global programa2 . valida_salir_gobal programa3 main programa3
    (7) programa2 -> programa2 . vars
    (10) valida_salir_gobal -> .
    (27) vars -> . RES_DEF COL vars1

    RES_START       reduce using rule 10 (valida_salir_gobal -> .)
    RES_FUNC        reduce using rule 10 (valida_salir_gobal -> .)
    RES_DEF         shift and go to state 22

    vars                           shift and go to state 21
    valida_salir_gobal             shift and go to state 23

state 17

    (8) programa2 -> empty .

    RES_DEF         reduce using rule 8 (programa2 -> empty .)
    RES_START       reduce using rule 8 (programa2 -> empty .)
    RES_FUNC        reduce using rule 8 (programa2 -> empty .)


state 18

    (5) programa1 -> empty .

    RES_DEF         reduce using rule 5 (programa1 -> empty .)
    RES_START       reduce using rule 5 (programa1 -> empty .)
    RES_FUNC        reduce using rule 5 (programa1 -> empty .)


state 19

    (4) programa1 -> RES_PROTO prototipos seen_prototipo programa1 .

    RES_DEF         reduce using rule 4 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)
    RES_START       reduce using rule 4 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)
    RES_FUNC        reduce using rule 4 (programa1 -> RES_PROTO prototipos seen_prototipo programa1 .)


state 20

    (13) prototipos -> RES_FUNC dato seen_dato . ID LPAREN prototipos_1 RPAREN

    ID              shift and go to state 24


state 21

    (7) programa2 -> programa2 vars .

    RES_DEF         reduce using rule 7 (programa2 -> programa2 vars .)
    RES_START       reduce using rule 7 (programa2 -> programa2 vars .)
    RES_FUNC        reduce using rule 7 (programa2 -> programa2 vars .)


state 22

    (27) vars -> RES_DEF . COL vars1

    COL             shift and go to state 25


state 23

    (1) programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal . programa3 main programa3
    (11) programa3 -> . programa3 modulos
    (12) programa3 -> . empty
    (127) empty -> .

    RES_START       reduce using rule 127 (empty -> .)
    RES_FUNC        reduce using rule 127 (empty -> .)

    programa3                      shift and go to state 26
    empty                          shift and go to state 27

state 24

    (13) prototipos -> RES_FUNC dato seen_dato ID . LPAREN prototipos_1 RPAREN

    LPAREN          shift and go to state 28


state 25

    (27) vars -> RES_DEF COL . vars1
    (28) vars1 -> . estructura vars1
    (29) vars1 -> . dato ID vars2 vars1_1
    (25) estructura -> . list
    (26) estructura -> . array
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING
    (36) list -> . RES_LIST dato ID list1
    (42) array -> . RES_ARRAY dato ID LBRACKET CTE_INT RBRACKET array1

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12
    RES_LIST        shift and go to state 32
    RES_ARRAY       shift and go to state 35

    estructura                     shift and go to state 31
    list                           shift and go to state 34
    vars1                          shift and go to state 30
    dato                           shift and go to state 33
    array                          shift and go to state 29

state 26

    (1) programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 . main programa3
    (11) programa3 -> programa3 . modulos
    (121) main -> . RES_START comienza_main COL bloque RES_END
    (47) modulos -> . prototipos se_uso COL bloque
    (13) prototipos -> . RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN

    RES_START       shift and go to state 37
    RES_FUNC        shift and go to state 7

    prototipos                     shift and go to state 36
    modulos                        shift and go to state 39
    main                           shift and go to state 38

state 27

    (12) programa3 -> empty .

    RES_START       reduce using rule 12 (programa3 -> empty .)
    RES_FUNC        reduce using rule 12 (programa3 -> empty .)
    $end            reduce using rule 12 (programa3 -> empty .)


state 28

    (13) prototipos -> RES_FUNC dato seen_dato ID LPAREN . prototipos_1 RPAREN
    (15) prototipos_1 -> . tipo ID prototipos_2
    (23) tipo -> . dato
    (24) tipo -> . estructura
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING
    (25) estructura -> . list
    (26) estructura -> . array
    (36) list -> . RES_LIST dato ID list1
    (42) array -> . RES_ARRAY dato ID LBRACKET CTE_INT RBRACKET array1

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12
    RES_LIST        shift and go to state 32
    RES_ARRAY       shift and go to state 35

    tipo                           shift and go to state 41
    prototipos_1                   shift and go to state 40
    list                           shift and go to state 34
    estructura                     shift and go to state 42
    dato                           shift and go to state 43
    array                          shift and go to state 29

state 29

    (26) estructura -> array .

    ID              reduce using rule 26 (estructura -> array .)
    RES_INT         reduce using rule 26 (estructura -> array .)
    RES_FLOAT       reduce using rule 26 (estructura -> array .)
    RES_DOUBLE      reduce using rule 26 (estructura -> array .)
    RES_BOOLEAN     reduce using rule 26 (estructura -> array .)
    RES_STRING      reduce using rule 26 (estructura -> array .)
    RES_LIST        reduce using rule 26 (estructura -> array .)
    RES_ARRAY       reduce using rule 26 (estructura -> array .)
    RPAREN          reduce using rule 26 (estructura -> array .)


state 30

    (27) vars -> RES_DEF COL vars1 .

    RES_READ        reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_PRINT       reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    ID              reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_DEF         reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_IF          reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_SWITCH      reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_WHILE       reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_FOR         reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_ELSE        reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    E_END           reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_END         reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_START       reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_FUNC        reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    $end            reduce using rule 27 (vars -> RES_DEF COL vars1 .)
    RES_CASE        reduce using rule 27 (vars -> RES_DEF COL vars1 .)


state 31

    (28) vars1 -> estructura . vars1
    (28) vars1 -> . estructura vars1
    (29) vars1 -> . dato ID vars2 vars1_1
    (25) estructura -> . list
    (26) estructura -> . array
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING
    (36) list -> . RES_LIST dato ID list1
    (42) array -> . RES_ARRAY dato ID LBRACKET CTE_INT RBRACKET array1

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12
    RES_LIST        shift and go to state 32
    RES_ARRAY       shift and go to state 35

    list                           shift and go to state 34
    estructura                     shift and go to state 31
    dato                           shift and go to state 33
    vars1                          shift and go to state 44
    array                          shift and go to state 29

state 32

    (36) list -> RES_LIST . dato ID list1
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12

    dato                           shift and go to state 45

state 33

    (29) vars1 -> dato . ID vars2 vars1_1

    ID              shift and go to state 46


state 34

    (25) estructura -> list .

    ID              reduce using rule 25 (estructura -> list .)
    RES_INT         reduce using rule 25 (estructura -> list .)
    RES_FLOAT       reduce using rule 25 (estructura -> list .)
    RES_DOUBLE      reduce using rule 25 (estructura -> list .)
    RES_BOOLEAN     reduce using rule 25 (estructura -> list .)
    RES_STRING      reduce using rule 25 (estructura -> list .)
    RES_LIST        reduce using rule 25 (estructura -> list .)
    RES_ARRAY       reduce using rule 25 (estructura -> list .)
    RPAREN          reduce using rule 25 (estructura -> list .)


state 35

    (42) array -> RES_ARRAY . dato ID LBRACKET CTE_INT RBRACKET array1
    (18) dato -> . RES_INT
    (19) dato -> . RES_FLOAT
    (20) dato -> . RES_DOUBLE
    (21) dato -> . RES_BOOLEAN
    (22) dato -> . RES_STRING

    RES_INT         shift and go to state 11
    RES_FLOAT       shift and go to state 15
    RES_DOUBLE      shift and go to state 13
    RES_BOOLEAN     shift and go to state 10
    RES_STRING      shift and go to state 12

    dato                           shift and go to state 47

state 36

    (47) modulos -> prototipos . se_uso COL bloque
    (48) se_uso -> .

    COL             reduce using rule 48 (se_uso -> .)

    se_uso                         shift and go to state 48

state 37

    (121) main -> RES_START . comienza_main COL bloque RES_END
    (122) comienza_main -> .

    COL             reduce using rule 122 (comienza_main -> .)

    comienza_main                  shift and go to state 49

state 38

    (1) programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 main . programa3
    (11) programa3 -> . programa3 modulos
    (12) programa3 -> . empty
    (127) empty -> .

    RES_FUNC        reduce using rule 127 (empty -> .)
    $end            reduce using rule 127 (empty -> .)

    programa3                      shift and go to state 50
    empty                          shift and go to state 27

state 39

    (11) programa3 -> programa3 modulos .

    RES_START       reduce using rule 11 (programa3 -> programa3 modulos .)
    RES_FUNC        reduce using rule 11 (programa3 -> programa3 modulos .)
    $end            reduce using rule 11 (programa3 -> programa3 modulos .)


state 40

    (13) prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 . RPAREN

    RPAREN          shift and go to state 51


state 41

    (15) prototipos_1 -> tipo . ID prototipos_2

    ID              shift and go to state 52


state 42

    (24) tipo -> estructura .

    RPAREN          reduce using rule 24 (tipo -> estructura .)
    ID              reduce using rule 24 (tipo -> estructura .)


state 43

    (23) tipo -> dato .

    RPAREN          reduce using rule 23 (tipo -> dato .)
    ID              reduce using rule 23 (tipo -> dato .)


state 44

    (28) vars1 -> estructura vars1 .

    RES_DEF         reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_START       reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_FUNC        reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_READ        reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_PRINT       reduce using rule 28 (vars1 -> estructura vars1 .)
    ID              reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_IF          reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_SWITCH      reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_WHILE       reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_FOR         reduce using rule 28 (vars1 -> estructura vars1 .)
    $end            reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_END         reduce using rule 28 (vars1 -> estructura vars1 .)
    E_END           reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_ELSE        reduce using rule 28 (vars1 -> estructura vars1 .)
    RES_CASE        reduce using rule 28 (vars1 -> estructura vars1 .)


state 45

    (36) list -> RES_LIST dato . ID list1

    ID              shift and go to state 53


state 46

    (29) vars1 -> dato ID . vars2 vars1_1
    (32) vars2 -> . EQUALS cons
    (33) vars2 -> . vars3
    (34) vars3 -> . COMMA ID vars3
    (35) vars3 -> . empty
    (127) empty -> .

    EQUALS          shift and go to state 54
    COMMA           shift and go to state 57
    RES_INT         reduce using rule 127 (empty -> .)
    RES_FLOAT       reduce using rule 127 (empty -> .)
    RES_DOUBLE      reduce using rule 127 (empty -> .)
    RES_BOOLEAN     reduce using rule 127 (empty -> .)
    RES_STRING      reduce using rule 127 (empty -> .)
    RES_LIST        reduce using rule 127 (empty -> .)
    RES_ARRAY       reduce using rule 127 (empty -> .)
    RES_DEF         reduce using rule 127 (empty -> .)
    RES_START       reduce using rule 127 (empty -> .)
    RES_FUNC        reduce using rule 127 (empty -> .)
    RES_READ        reduce using rule 127 (empty -> .)
    RES_PRINT       reduce using rule 127 (empty -> .)
    ID              reduce using rule 127 (empty -> .)
    RES_IF          reduce using rule 127 (empty -> .)
    RES_SWITCH      reduce using rule 127 (empty -> .)
    RES_WHILE       reduce using rule 127 (empty -> .)
    RES_FOR         reduce using rule 127 (empty -> .)
    $end            reduce using rule 127 (empty -> .)
    RES_END         reduce using rule 127 (empty -> .)
    E_END           reduce using rule 127 (empty -> .)
    RES_ELSE        reduce using rule 127 (empty -> .)
    RES_CASE        reduce using rule 127 (empty -> .)

    vars3                          shift and go to state 55
    vars2                          shift and go to state 56
    empty                          shift and go to state 58

state 47

    (42) array -> RES_ARRAY dato . ID LBRACKET CTE_INT RBRACKET array1

    ID              shift and go to state 59


state 48

    (47) modulos -> prototipos se_uso . COL bloque

    COL             shift and go to state 60


state 49

    (121) main -> RES_START comienza_main . COL bloque RES_END

    COL             shift and go to state 61


state 50

    (1) programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 main programa3 .
    (11) programa3 -> programa3 . modulos
    (47) modulos -> . prototipos se_uso COL bloque
    (13) prototipos -> . RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN

    $end            reduce using rule 1 (programa -> programa1 generaglo valida_entra_global programa2 valida_salir_gobal programa3 main programa3 .)
    RES_FUNC        shift and go to state 7

    prototipos                     shift and go to state 36
    modulos                        shift and go to state 39

state 51

    (13) prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .

    COL             reduce using rule 13 (prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .)
    RES_PROTO       reduce using rule 13 (prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .)
    RES_DEF         reduce using rule 13 (prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .)
    RES_START       reduce using rule 13 (prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .)
    RES_FUNC        reduce using rule 13 (prototipos -> RES_FUNC dato seen_dato ID LPAREN prototipos_1 RPAREN .)


state 52

    (15) prototipos_1 -> tipo ID . prototipos_2
    (16) prototipos_2 -> . COMMA prototipos_1
    (17) prototipos_2 -> . empty
    (127) empty -> .

    COMMA           shift and go to state 63
    RPAREN          reduce using rule 127 (empty -> .)

    prototipos_2                   shift and go to state 62
    empty                          shift and go to state 64

state 53

    (36) list -> RES_LIST dato ID . list1
    (37) list1 -> . LCURLY cons_loop RCURLY
    (38) list1 -> . empty
    (127) empty -> .

    LCURLY          shift and go to state 66
    RES_INT         reduce using rule 127 (empty -> .)
    RES_FLOAT       reduce using rule 127 (empty -> .)
    RES_DOUBLE      reduce using rule 127 (empty -> .)
    RES_BOOLEAN     reduce using rule 127 (empty -> .)
    RES_STRING      reduce using rule 127 (empty -> .)
    RES_LIST        reduce using rule 127 (empty -> .)
    RES_ARRAY       reduce using rule 127 (empty -> .)
    ID              reduce using rule 127 (empty -> .)
    RPAREN          reduce using rule 127 (empty -> .)

    list1                          shift and go to state 65
    empty                          shift and go to state 67

state 54

    (32) vars2 -> EQUALS . cons
    (109) cons -> . ID exp_1
    (110) cons -> . CTE_INT exp_2
    (111) cons -> . CTE_FLOAT exp_3
    (112) cons -> . CTE_DOUBLE
    (113) cons -> . CTE_STRING
    (114) cons -> . RES_TRUE
    (115) cons -> . RES_FALSE
    (116) cons -> . consarray
    (117) cons -> . conslist
    (123) consarray -> . ID LBRACKET CTE_INT RBRACKET EQUALS cons
    (124) conslist -> . ID EQUALS LCURLY conslist1 RCURLY

    ID              shift and go to state 76
    CTE_INT         shift and go to state 75
    CTE_FLOAT       shift and go to state 72
    CTE_DOUBLE      shift and go to state 70
    CTE_STRING      shift and go to state 68
    RES_TRUE        shift and go to state 73
    RES_FALSE       shift and go to state 77

    conslist                       shift and go to state 74
    consarray                      shift and go to state 71
    cons                           shift and go to state 69

state 55

    (33) vars2 -> vars3 .
